# genai

./: .gitignore  main.py  pyproject.toml
GraphDataStrucuture/: main.py
LangGraph/: chat_2.py  chat_checkpoint.py  docker-compose.yml  main.py
OpenAI-Agent/: main.py
RAGs/: basics.py  chat.py  index.py
agents/: tool_calling.py
memory_agent/: main.py
multimodal/: main.py
prompting_basics/: PROMPT_STYLE.md  chain_of_thought.py  few_shot.py  few_shot_structure.py  main.py  persona_based.py  zero_shot.py
