[project]
name = "agenticais"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.14.0",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "transformers>=4.57.3",
]
